--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    {% block stylesheet %}
+    
+    {% endblock %}
     <link rel="stylesheet" href="/css/main.css">
   </head>
 
