--- a/views/layout.html
+++ b/views/layout.html
@@ -5,7 +5,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     {% block stylesheet %}
-    
+
     {% endblock %}
     <link rel="stylesheet" href="/css/main.css">
   </head>
@@ -17,6 +17,15 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
+    <script src="{{ asset('NetRadio/libraries/socket.io.js')}}"></script>
+    <script src="{{ asset('NetRadio/libraries/serialijse.bundle.min.js')}}"></script>
+
+
+
+    {% block script %}
+
+    {% endblock %}
+
   </body>
 
 </html>
