--- a/views/containers/login.html
+++ b/views/containers/login.html
@@ -12,6 +12,12 @@
 
     <h1>Login Page</h1>
 
+    <form action="/login/valid" method="get">
+      <input name="username" type="text"  id="username" placeholder="Pseudo" />
+      <input name="password" type="password" id="password" placeholder="Mot de passe" />
+      <input type="submit" id="submit" placeholder="Pseudo" value="S'inscire" />
+  </form>
+
   </div>
 
 {% endblock %}
