--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,14 @@
 .main_title {
-    color: red
+    color: #00FFBE;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    background-image: url(../microphone.jpg);
+    color : white;
+}
+
+#playButton{
+    color : black;
 }
