--- a/views/layout.html
+++ b/views/layout.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     {% block stylesheet %}
     
     {% endblock %}
+
+    
   </head>
 
   <body>
