--- a/views/containers/login.html
+++ b/views/containers/login.html
@@ -18,7 +18,7 @@
     <form action="/login/valid" method="get">
       <input name="username" type="text"  id="username" placeholder="Pseudo" />
       <input name="password" type="password" id="password" placeholder="Mot de passe" />
-      <input type="submit" id="submit" placeholder="Pseudo" value="S'inscire" />
+      <input type="submit" id="submit" placeholder="Pseudo" value="Se connecter" />
     </form>
 
   </div>
