Ajout du menu sur inscription et connexion

--- a/views/containers/register.html
+++ b/views/containers/register.html
@@ -9,7 +9,9 @@
 
 {% block content %}
 
-  <div class="container">
+{% include '../components/navigation/navigation.html' %}
+
+  <div class="container">    
 
     <h1>INSCRIPTION</h1>
 
