--- a/views/containers/login.html
+++ b/views/containers/login.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include '../components/navigation/navigation.html' %}
+
   <div class="container">
 
     <h1>CONNEXION</h1>
