--- a/views/containers/index.html
+++ b/views/containers/index.html
@@ -13,7 +13,7 @@
 
     <h1 class="components_main-title">{{presentator}} est en live</h1>
 
-    <h2>{{liveTitle}}</h2>
+    <h2 class="title">{{liveTitle}}</h2>
 
     	
     <progress value="150" max="200">50%</progress> 
@@ -21,7 +21,7 @@
 
     <button id="playButton">Play/Pause</button>
 
-    <p>{{livePresentation}}</p>
+    <p cl>{{LivePresentation}}</p>
 
   </div>
 
