--- a/views/containers/index.html
+++ b/views/containers/index.html
@@ -9,6 +9,8 @@
 
 {% block content %}
 
+{% include '../components/navigation/navigation.html' %}
+
   <div class="container">
 
     <h1 class="components_main-title">{{presentator}} est en live</h1>
