--- a/public/stylesheets/navigation/navigation.css
+++ b/public/stylesheets/navigation/navigation.css
@@ -34,6 +34,8 @@
 }
 
 #navigation_menu {
+    position: absolute;
+    right: 0;
     height: calc(100vh - 80px);
     background-color: #252525;
     width: 100%;
