--- a/views/containers/index.html
+++ b/views/containers/index.html
@@ -21,7 +21,10 @@
     <progress value="150" max="200">50%</progress> 
 
 
-    <button id="playButton">Play/Pause</button>
+    <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <button id="playButton">
+      <img src="/images/playIcon.png" alt="">
+    </button>
 
     <p cl>{{LivePresentation}}</p>
 
