changement entre le button play et pause

--- a/views/containers/index.html
+++ b/views/containers/index.html
@@ -23,7 +23,7 @@
 
     <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <button id="playButton">
-      <img src="/images/playIcon.png" alt="">
+      <img id="imgButton" src="/images/playIcon.png" alt="">
     </button>
 
     <p cl>{{LivePresentation}}</p>
