--- a/views/containers/announcerLive.html
+++ b/views/containers/announcerLive.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block stylesheet %}
-
+<link rel="stylesheet" href="/stylesheets/announcer.css">
 {% endblock %}
 
 
@@ -15,12 +15,13 @@
 
     <h1>{{liveTitle}}</h1>
 
+    <div id=controls>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
     <button id="playFile">Play file</button>
     <button id="musicTest">Test file</button>
     <audio src="exemple1.mp3" id="track"></audio>
-    <input type="checkbox" id="recordPodcast" checked=true>Enregistrer le podcast</input>
+   <input type="checkbox" id="recordPodcast" checked=true>Enregistrer le podcast</input>
     <div class="slidecontainer">
          Distortion:
     <input type="range" min="0" max="1000" value="0" class="slider" id="distortion">
@@ -33,10 +34,14 @@
             Volume musique:
       <input type="range" min="0" max="100" value="50" class="slider" id="musicGain">
     </div>
-
-
-    <input type="checkBox" id="muteBox">Couper envoi</input>
+     <input type="checkBox" id="muteBox">Couper envoi</input>
     <input type="checkBox" id="feedBackBox">Activer retour</input>
+  </div>
+    
+   
+
+
+   
     <audio src="" id="finalRecording"></audio>
 
 
