--- a/public/stylesheets/announcer.css
+++ b/public/stylesheets/announcer.css
@@ -15,11 +15,14 @@ button{
 #controls{
     display:block;
     /*background-color: red;*/
-    width:15vw;
-    text-align: center;
-    height:15;
+    width:25vw;
+   position: absolute;
+   left:1vw;
+    height:20vh;
+    overflow-y: scroll;
 }
 #controls>*{
+    text-align:center;
     width:100%;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -38,4 +41,39 @@ input[type='range'] {
      cursor: ew-resize;
      background: purple;
      box-shadow: -80px 0 0 80px purple;
+ }
+ label{
+     color: purple;
+ }
+ #presentation{
+       margin-top: 5%;
+       margin-left: 10%;
+       margin-right: 28%;
+       grid-row: 6;
+       grid-column: 1/4;
+       font-size: large;
+       color:white;
+ }
+ #controlsLabel{
+      margin-top: 5%;
+     text-align: left;
+      font-size: large;
+      color:rgb(121, 236, 183);
+ }
+
+ /* width */
+ ::-webkit-scrollbar {
+     width: 1vw;
+ }
+
+ /* Track */
+ ::-webkit-scrollbar-track {
+     background: #f1f1f1;
+     border-radius: 1rem;
+ }
+
+
+ ::-webkit-scrollbar-thumb {
+     background: purple;
+     border-radius: 1rem;
  }
