--- a/public/stylesheets/updateAuditor.css
+++ b/public/stylesheets/updateAuditor.css
@@ -17,6 +17,38 @@ body{
 }
 
 form{
+    text-align: center;
+    margin-top: 25vh;
+    transform: translateY(-25%);
     /*background-color: blue;*/
 }
 
+label{
+    color: white;
+}
+
+input{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    width: 30rem;
+    height: 35px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1.2em;
+    /*background-color: red;*/
+}
+
+input[type=submit]{
+    width: 20rem;
+    background-color: #9741f7;
+    border-color: #9741f7;
+    color: white;
+    margin-top: 40px;
+}
+
+input[type=submit]:hover{
+    background-color: #a661f5;
+    border-color: #a661f5;
+}
