--- a/public/stylesheets/createLive.css
+++ b/public/stylesheets/createLive.css
@@ -32,7 +32,7 @@ input{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     width: 30rem;
     height: 35px;
     text-align: center;
@@ -46,10 +46,14 @@ input[type=submit]{
     background-color: #9741f7;
     border-color: #9741f7;
     color: white;
-    margin-top: 40px;
+    margin-top: 50px;
 }
 
 input[type=submit]:hover{
     background-color: #a661f5;
     border-color: #a661f5;
+}
+
+#desciption{
+    width: 50rem;
 }
