--- a/views/containers/updateAuditor.html
+++ b/views/containers/updateAuditor.html
@@ -13,7 +13,7 @@
 
   <div class="container">    
 
-    <h1>Modification profil</h1>
+    <h1>MODIFICATION PROFIL</h1>
 
     <form action="/:username/profil/valid" method="post">
         <div class="under_form">
