--- a/views/containers/announcerLive.html
+++ b/views/containers/announcerLive.html
@@ -20,9 +20,7 @@
    
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-    <button id="playFile">Play file</button>
-    <button id="musicTest">Test file</button>
-    <audio src="exemple1.mp3" id="track"></audio>
+  
     <label for="recording">Enregistrer le podcast</label>
    <input type="checkbox" id="recordPodcast" name='recording' checked=true</input>
     <div class="slidecontainer">
@@ -42,6 +40,9 @@
      <input type="checkBox" id="muteBox" name="mute"></input>
      <label for="feedback">Activer le retour</label>
     <input type="checkBox" id="feedBackBox" name='feedback'></input>
+      <button id="playFile">Play file</button>
+    <button id="musicTest">Test file</button>
+    <button id='stopMusic'>Stop file</button>
   </div>
     
    
