--- a/views/containers/login.html
+++ b/views/containers/login.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  {% include '../components/navigation/navigation.html' %}
+  {% include '../components/navigation/navigation.html' with {'username': 'keduma'} %}
 
   <div class="container">
 
