--- a/views/containers/podcasts.html
+++ b/views/containers/podcasts.html
@@ -14,11 +14,11 @@
   <div class="container">    
 
     <h1>Liste des podcasts</h1>
-
+    <ul id='podcastList'></ul>
     
   </div>
 
 {% endblock %}
 {% block script %}
-  <script src="/public/podcast.js"></script>
+  <script src="/js/podcast.js"></script>
 {% endblock %}
