--- a/views/containers/register.html
+++ b/views/containers/register.html
@@ -24,7 +24,7 @@
         <input name="password" type="password" id="password" placeholder="Mot de passe" />
         <input name="passwordConfirm" type="password" id="passwordConfirm" placeholder="Mot de passe confirmation" />
         <input name="mail" type="mail" id="mail" placeholder="Adresse mail" />
-        <input type="submit" id="submit" placeholder="Pseudo" value="S'inscire" />
+        <input type="submit" id="submit" placeholder="Pseudo" value="S'inscrire" />
     </form>
 
   </div>
