--- a/views/containers/login.html
+++ b/views/containers/login.html
@@ -17,7 +17,7 @@
 
     <h1>CONNEXION</h1>
 
-    <form action="/login/valid" method="get">
+    <form action="/login/valid" method="post">
       <input name="username" type="text"  id="username" placeholder="Pseudo" />
       <input name="password" type="password" id="password" placeholder="Mot de passe" />
       <input type="submit" id="submit" placeholder="Pseudo" value="Se connecter" />
