creation live + mise a jour infos live

--- a/views/containers/createLive.html
+++ b/views/containers/createLive.html
@@ -15,12 +15,12 @@
 
     <h1>CRÉER UN LIVE</h1>
 
-    <form action="/{{username}}/makelive/valid" method="post">
+    <form action="/user/{{username}}/makelive/valid" method="post">
         <div class="under_form">
             <label for="date_start">Date début (Exemple: 07/04/2021-15:00)</label>
-            <input name="date_start" type="text"  id="date_start" placeholder="jj/mm/aaaa-hh:mm" />
+            <input name="date_start" type="datetime-local"  id="date_start" placeholder="jj/mm/aaaa-hh:mm" />
             <label for="date_end">Date fin (Exemple: 07/04/2021-18:00)</label>
-            <input name="date_end" type="text"  id="date_end" placeholder="jj/mm/aaaa-hh:mm" />
+            <input name="date_end" type="datetime-local"  id="date_end" placeholder="jj/mm/aaaa-hh:mm" />
         </div>
 
         <div class="under_form">
@@ -30,7 +30,7 @@
 
         <div class="under_form">
             <label for="description">Description</label>
-            <input name="desciption" type="text" id="desciption" placeholder="Ma description" />
+            <input name="description" type="text" id="description" placeholder="Ma description" />
         </div>
 
         <div class="under_form">
