--- a/views/components/navigation/navigation.html
+++ b/views/components/navigation/navigation.html
@@ -24,7 +24,7 @@
 <nav id="navigation_menu">
     <ul>
         <li><a href="/">ACCUEIL</a> </li>
-        <li><a href="/schedule">PROGRAMMATION</a></li>
+        <li><a href="/programs">PROGRAMMATION</a></li>
         <li><a href="/live">LIVE</a></li>
         <li><a href="/podcasts">PODCAST</a></li>
     </ul>
