--- a/views/containers/updateAuditor.html
+++ b/views/containers/updateAuditor.html
@@ -11,7 +11,9 @@
 
 {% include '../components/navigation/navigation.html' %}
 
-  <div class="container">    
+  <div class="container">   
+    
+    <a href="/user/{{username}}/addmusics">Add Musics</a>
 
     <h1>MODIFICATION PROFIL</h1>
 
